Fixes directions origin precision, map overlap with navbar

--- a/esp/public/media/default_styles/webapp.css
+++ b/esp/public/media/default_styles/webapp.css
@@ -8,6 +8,7 @@
   left: 0;
   right: 0;
   margin: auto;
+  z-index: 1000;
 }
 
 .navbar .selected {
